# nwbmatic

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yml
AUTHORS/: index.html
CONTRIBUTING/: index.html
docs/: AUTHORS.md  CONTRIBUTING.md  index.md  io.allends.md  io.md  nwbmatic-custom-io.md  nwbmatic-neurosuite-optitrack.md
io/: index.html
io.allends/: index.html
io.cnmfe/: index.html
io.loader/: index.html
io.neurosuite/: index.html
io.phy/: index.html
io.suite2p/: index.html
nwbmatic/: __init__.py  allends.py  cnmfe.py  loader.py  misc.py  neurosuite.py  phy.py  suite2p.py
nwbmatic-custom-io/: index.html
nwbmatic-neurosuite-optitrack/: index.html
search/: search_index.json
tests/: test_allends.py  test_cnmfe.py  test_neurosuite.py  test_nwb.py  test_phy.py  test_suite2p.py  test_test.py
tests/nwbfilestest/allends/pynallensdk/: manifest.json  probes.csv  session.txt  sessions.csv
